Fix multitool range behavior across supported versions